# semihost

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  README.rst  SECURITY.md  UPLOAD.md  semihost.md
.claude/: AI.md
.clusterfuzzlite/: Dockerfile  build.sh
.github/workflows/: ci.yml  codeql.yml  docs.yml  fuzz.yml
cmake/: Sanitizers.cmake
docs/: Doxyfile  Makefile  client-library.md  emulator-integration.md  make.bat  requirements.txt  specification.md
docs/presentation/: README.md
docs/source/: architecture.rst  building.rst  client-library.rst  conf.py  documentation-sources.rst  emulator-integration.rst  examples.rst  index.rst  introduction.rst  linux-extensions-proposal.rst  linux-extensions.rst  qemu-transports-proposal.rst  qemu-transports.rst  security.rst  specification.rst  testing.rst
docs/source/_extra/presentation-intro/: README.md  index.html
docs/source/api/: backend.rst  client.rst  cpp.rst  high-level.rst  host.rst  index.rst  protocol.rst
examples/mame/: Makefile  crt6502.c  crti386.S  hello.c  test6502.S  zbc6502.ld  zbci386.ld
fuzz/: CMakeLists.txt  fuzz_riff_parser.c  gen_malformed_corpus.py
fuzz/corpus/riff_parser/: .gitignore  riff_cnfg  riff_errno  riff_header
include/: zbc_api.h  zbc_backend.h  zbc_backend_ansi.h  zbc_client.h  zbc_host.h  zbc_protocol.h  zbc_sandbox.h  zbc_semi_backend.h  zbc_semi_client.h  zbc_semi_common.h  zbc_semi_host.h  zbc_semihost.h
include/c/: zbc_9p.h  zbc_api.h  zbc_backend.h  zbc_backend_ansi.h  zbc_client.h  zbc_composite.h  zbc_host.h  zbc_semihost.h  zbc_vcon.h  zbc_virtio.h
include/cpp/zbc/: Backend.h  Device.h  GuestMemory.h  PathValidator.h  Policy.h  Protocol.h
include/shared/: zbc_9p_wire.h  zbc_protocol.h  zbc_virtio_wire.h
include/zbc/: Backend.h  Common.h  Device.h  FileDescTable.h  GuestMemory.h  PathValidator.h  Policy.h  Protocol.h  RiffCodec.h  Semihost.h
pages/01-foundation/: Getting_Started.wiki
pages/02-architecture/: System_Overview.wiki
pages/03-semihosting/: Semihosting_Overview.wiki
pages/08-templates/: Template_SeeAlso.wiki
reference/: source-zbc.rst
src/: zbc_ansi_common.c  zbc_ansi_insecure.c  zbc_ansi_internal.h  zbc_ansi_secure.c  zbc_backend_ansi.c  zbc_backend_dummy.c  zbc_client.c  zbc_host.c  zbc_opcode_table.c  zbc_riff.c
src/c/: zbc_ansi_common.c  zbc_ansi_insecure.c  zbc_ansi_internal.h  zbc_ansi_secure.c  zbc_api.c  zbc_backend_dummy.c  zbc_client.c  zbc_host.c  zbc_transport_9p.c  zbc_transport_composite.c  zbc_transport_null.c  zbc_transport_vcon.c  zbc_virtio.c
src/client/: zbc_client_core.c  zbc_client_syscalls.c
src/cpp/: Backend.cpp  Device.cpp  FileDescTable.cpp  PathValidator.cpp  Policy.cpp  RiffCodec.cpp
src/host/: zbc_host_core.c
src/host/backends/: zbc_backend_ansi.c  zbc_backend_dummy.c
src/platform/darwin/: sandbox_seatbelt.c
src/platform/generic/: sandbox_stub.c
src/platform/linux/: sandbox_seccomp.c
src/shared/: zbc_opcode_table.c  zbc_riff.c
test/: CMakeLists.txt  TEST_PLAN.md  TEST_PLAN.rst  mock_device.c  mock_device.h  mock_memory.c  mock_memory.h  test_ansi_backend.c  test_ansi_common.h  test_ansi_insecure.c  test_ansi_secure.c  test_client_builder.c  test_harness.c  test_harness.h  test_main.c  test_roundtrip.c  test_sandbox.c
test/c/: CMakeLists.txt  test_9p.c  test_ansi_insecure.c  test_ansi_secure.c  test_api.c  test_client_builder.c  test_composite.c  test_main.c  test_roundtrip.c  test_sandbox.c  test_transport.c  test_vcon.c  test_virtio.c
test/common/: mock_9p.c  mock_9p.h  mock_device.c  mock_device.h  mock_memory.c  mock_memory.h  mock_virtio.c  mock_virtio.h  test_harness.h
test/conformance/: CMakeLists.txt  test_conformance.cpp
test/cpp/: CMakeLists.txt  test_cpp.cpp
test/host/: CMakeLists.txt  test_ansi_secure.c  test_api.c  test_client_builder.c  test_roundtrip.c
web/: .gitignore  OUTLINE.md  PLAN.md  README.md  config.ini.example  upload_wiki.py
web/pages/01-foundation/: Main_Page.wiki  What_is_Zero_Board_Computer.wiki
web/pages/03-semihosting/: Semihosting_Overview.wiki
web/pages/08-templates/: Template_Note.wiki  Template_Warning.wiki  Template_ZBC_Navigation.wiki
web/reference/: source-semihost.md
